--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 * {
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: Comic Sans MS, Comic Sans;
     text-shadow: 1px 1px 2px rgb(3, 118, 118);
 }
